# tdmd

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEX_ENV_BOOTSTRAP_PROMPT.md  CODEX_GPU_MASTER_PROMPT.md  CODEX_MASTER_PROMPT.md  CONTRIBUTING.md  Makefile  README.md  REFACTORING_PLAN.md  RELEASE_NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: CODEX_PROMPT_RISK_HARDENING.md  CODEX_RUNBOOK.md  CONTRACTS.md  CUDA_EXECUTION_PLAN.md  DEPSGRAPH.md  ENSEMBLES.md  GITLAB_PUBLISH.md  GPU_BACKEND.md  GPU_BACKEND_API.md  GPU_VERIFY_PLAN.md  INVARIANTS.md  LIVENESS.md  MODE_CONTRACTS.md  PORTABILITY_KOKKOS_PLAN.md  PR0_DATA_CONTRACT.md  PROJECT_STATUS.md  PR_PLAN_GPU.md  RISK_BURNDOWN_PLAN.md  RISK_BURNDOWN_PLAN_V2.md  ROADMAP.md  ROADMAP_GPU.md  SPEC_TD_AUTOMATON.md  TD_EQUIVALENCE_MODES.md  THEORY_VS_CODE.md  TODO.md  VERIFYLAB.md  VERIFYLAB_GPU.md  VERSIONING.md  VISUALIZATION.md  WFG_DIAGNOSTICS.md  WORKTREE_SLICE_PLAN.md  td_proofs_and_scaling.md
examples/: task_ml_reference.yaml  td_1d_lj.yaml  td_1d_morse.yaml  td_1d_morse_static_rr.yaml  td_1d_morse_static_rr_smoke4.yaml
golden/: cfg_system_smoke.json  cluster_scale_envelope_v1.json  longrun_envelope_v1.json  material_threshold_policy_v2.json  testcases_paper.json
scripts/: bench_al_crack_compare.py  bench_cluster_scale.py  bench_cluster_stability.py  bench_eam_decomp_perf.py  bench_eam_td_breakdown_gpu.py  bench_eam_zone_sweep_gpu.py  bench_gpu_perf_smoke.py  bench_mpi_overlap.py  bench_mpi_transport_matrix.py  bench_slab_wavefront_evidence_gpu.py  bench_td_autozoning_advisor.py  bench_time_blocking.py  bench_viz_contract.py  bench_wavefront_reference_equivalence.py  bootstrap_codex_env.sh  calibrate_material_thresholds.py  export_incident_bundle.py  generate_al_crack_task.py  generate_al_cu_crack_task.py  generate_materials_parity_fixture.py  materials_parity_pack.py  materials_property_gate.py  ml_reference_parity_pack.py  plot_td_trace.py  profile_gpu_backend.py  run_codex_tdmd.sh  run_mpi_smoke.py  run_verifylab_matrix.py  run_verifylab_smoke.sh  viz_analyze.py  viz_bundle.py  viz_ovito_adapter.py  viz_paraview_adapter.py  viz_vmd_adapter.py
tdmd/: __init__.py  atoms.py  backend.py  celllist.py  cli_commands.py  cli_parser.py  cluster_profile.py  config.py  constants.py  deps_provider.py  deps_provider_3d.py  ensembles.py  force_dispatch.py  forces_cells.py  forces_gpu.py  forces_nl.py  geom_pbc.py  golden.py  graph_utils.py  incident_bundle.py  integrator.py  interaction_table.py  interaction_table_state.py  main.py  many_body_scope.py  observables.py  observer.py  output.py  overlap.py  overlap_cells.py  potentials.py  run_configs.py  serial.py  state.py  td_automaton.py  td_full_mpi.py  td_local.py  td_trace.py  testcases.py  verify_golden.py  (+12 more)
tests/: test_al_crack_bench_script.py  test_backend.py  test_chaos_verifylab.py  test_cluster_bench_scripts.py  test_cluster_profile.py  test_constants.py  test_contracts_guard.py  test_deps_provider_3d.py  test_eam_decomp_perf_script.py  test_eam_open_library.py  test_eam_runtime.py  test_eam_td_breakdown_gpu_script.py  test_eam_td_local.py  test_eam_zone_sweep_gpu_script.py  test_ensemble_runtime.py  test_generate_materials_fixture.py  (+58 more)
(+61 files in other folders)
