[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdmd"
description = "TDMD-TD (Time Decomposition Molecular Dynamics)"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "numpy>=1.23",
  "pyyaml>=6.0",
  "mpi4py>=3.1; platform_system != 'Windows'",
  "pytest>=7.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.0",
  "types-PyYAML>=6.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["tdmd*"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true
extend-exclude = """
(
  \\.venv
| results
| out
| build
| dist
| __pycache__
)
"""

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".venv",
  "results",
  "out",
  "build",
  "dist",
  "__pycache__",
]

[tool.ruff.lint]
# Phase 2: import sorting + pyflakes (real bugs).
# Next expansion (phase 3): add "UP", "B", "E", "W" after cleanup.
select = ["I", "F"]
# F401 (unused import) produces many hits in test helpers and __init__ re-exports;
# enforce gradually via per-file overrides rather than repo-wide noise.
ignore = ["F401"]

[tool.ruff.lint.per-file-ignores]
# Tests and scripts use wildcard imports and top-level conditional logic.
"tests/*" = ["F811"]
"scripts/*" = ["F811"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
exclude = "^(\\.venv/|results/|out/|build/|dist/|__pycache__/)"
