[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdmd"
description = "TDMD-TD (Time Decomposition Molecular Dynamics)"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "numpy>=1.23",
  "pyyaml>=6.0",
  "mpi4py>=3.1; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.0",
  "types-PyYAML>=6.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["tdmd*"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true
extend-exclude = """
(
  \\.venv
| results
| out
| build
| dist
| __pycache__
)
"""

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".venv",
  "results",
  "out",
  "build",
  "dist",
  "__pycache__",
]

[tool.ruff.lint]
select = ["I", "F", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]
"scripts/*" = ["F811", "E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
exclude = "^(\\.venv/|results/|out/|build/|dist/|__pycache__/)"
